feat: add five search commands

--- a/config/default_from_url.yaml
+++ b/config/default_from_url.yaml
@@ -107,6 +107,11 @@ command_files:
 - config/commands/edit_linting.sh
 - config/commands/_split_string.py
 - config/commands/search_class.py
+- config/commands/search_method_in_file.py
+- config/commands/search_method_in_class.py
+- config/commands/search_method_in_codebase.py
+- config/commands/search_code_in_codebase.py
+- config/commands/search_code_in_file.py
 parse_command: ParseCommandDetailed
 history_processor: Last5Observations
 demonstrations:
