--- a/config/default_from_url.yaml
+++ b/config/default_from_url.yaml
@@ -3,6 +3,7 @@ system_template: |-
 
   The special interface consists of a file editor that shows you {WINDOW} lines of a file at a time.
   In addition to typical bash commands, you can also use the following commands to help you navigate and edit files.
+  Note that you can use multiple commands in one round.
 
   COMMANDS:
   {command_docs}
@@ -21,19 +22,19 @@ system_template: |-
   ```
   ls -a
   ```
-
-  You should only include a *SINGLE* command in the command section and then wait for a response from the shell before continuing with more discussion and commands. Everything you include in the DISCUSSION section will be saved for future reference.
-  If you'd like to issue two commands at once, PLEASE DO NOT DO THAT! Please instead first submit just the first command, and then after receiving a response you'll be able to issue the second command.
-  You're free to use any other bash commands you want (e.g. find, grep, cat, ls, cd) in addition to the special commands listed above.
-  However, the environment does NOT support interactive session commands (e.g. python, vim), so please do not invoke them.
+  There are two kinds of commands:
+  For the first kind of commands (e.g. open, edit), you should only include a *SINGLE* command in the command section and then wait for a response from the shell before continuing with more discussion and commands. First submit just the first command, and then after receiving a response you'll be able to issue the second command. Everything you include in the DISCUSSION section will be saved for future reference.
+  For the second kind of commands (e.g. find, grep, ls, cat, search_class, search_method_in_file, search_method_in_class, search_method_in_codebase, search_dir, search_file, find_file), you can issue two commands at once. 
+  The environment does NOT support interactive session commands (e.g. python, vim), so please do not invoke them.
 instance_template: |-
   We're currently solving the following issue within our repository. Here's the issue text:
   ISSUE:
   {issue}
 
   INSTRUCTIONS:
-  Now, you're going to solve this issue on your own. Your terminal session has started and you're in the repository's root directory. You can use any bash commands or the special interface to help you. Edit all the files you need to and run any checks or tests that you want.
-  Remember, YOU CAN ONLY ENTER ONE COMMAND AT A TIME. You should always wait for feedback after every command.
+  Now, you're going to solve this issue on your own. Your terminal session has started and you're in the repository's root directory. You can use any bash commands or the special interface to help you. Edit all the files you need to and run any checks or tests that you want. 
+  For commands such as open and edit, you can only use one at a time.
+  For commands such as find, grep, ls, cat, search_class, search_method_in_file, search_method_in_class, search_method_in_codebase, search_dir, search_file and find_file, you can issue two commands at once.
   When you're satisfied with all of the changes you've made, you can submit your changes to the code base by simply running the submit command.
   Note however that you cannot use any interactive session commands (e.g. python, vim) in this environment, but you can write scripts and run them. E.g. you can write a python script and then run it with `python <script_name>.py`.
 
